--- a/src/components/navbarhome/navbarhome.css
+++ b/src/components/navbarhome/navbarhome.css
@@ -1,14 +1,13 @@
-#registerbtn,#loginbtn{
-    background-color: white;
-    border:none;
-    padding-left:35%;
-    padding-right:35%;
-    border-radius: 5%;
+#navbarNav{
+    padding-left: 82%;
 }
 .navbar{
     background-color: #00acb1;
-    column-gap: 0%;
 }
-#disabled{
-    visibility: hidden;
+.navbar ul li{
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+.nav-link{
+    color: #ffffff;
 }
