--- a/src/components/loginform/loginform.css
+++ b/src/components/loginform/loginform.css
@@ -1,10 +1,6 @@
 #form{
     height: 80%;
     width: 400px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
     padding: 50px 35px;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
@@ -12,9 +8,16 @@
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
-body{
+#loginform{
     background:url(blob-scatter-haikei.svg);
     background-size: cover;
+    padding-top:5%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom:3.6%;
 }
 #form *{
     font-family: 'Poppins',sans-serif;
@@ -50,7 +53,14 @@ input{
 ::placeholder{
     color: #000;
 }
-button{
+
+#or{
+    text-align: center;
+    font-family: 'Poppins',sans-serif;
+    color:black;
+}
+#facelog{
+    margin-top:1%;
     margin-top: 50px;
     width: 100%;
     background-color: #ffffff;
@@ -60,14 +70,6 @@ button{
     font-weight: 600;
     border-radius: 5px;
     cursor: pointer;
-}
-#or{
-    text-align: center;
-    font-family: 'Poppins',sans-serif;
-    color:black;
-}
-#facelog{
-    margin-top:1%;
 }
 #videoCam{
     display:none;
