--- a/src/components/registerform/registerform.css
+++ b/src/components/registerform/registerform.css
@@ -1,10 +1,7 @@
 #form1{
     height: 90%;
     width: 400px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
+    
     padding: 50px 35px;
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
@@ -12,9 +9,16 @@
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
-body{
+#regform{
     background:url(register.svg);
     background-size: cover;
+    padding-top:2%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom:1.3%;
 }
 #form1 *{
     font-family: 'Poppins',sans-serif;
