--- a/src/components/navbarhome/navbarhome.css
+++ b/src/components/navbarhome/navbarhome.css
@@ -1,13 +1,4 @@
-#navbarNav{
-    padding-left: 82%;
-}
-.navbar{
-    background-color: #00acb1;
-}
-.navbar ul li{
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-.nav-link{
-    color: #ffffff;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
