--- a/src/components/land3/land3.css
+++ b/src/components/land3/land3.css
@@ -17,7 +17,7 @@
 .section-heading h6 {
     font-size: 15px;
     font-weight: 700;
-    color: #00acb1;
+    color: #1779BD;
     text-transform: uppercase;
     margin-bottom: 15px;
 }
@@ -32,14 +32,14 @@
 
 .section-heading h4 em {
     font-style: normal;
-    color: #00acb1;
+    color: #1779BD;
     font-family: 'Poppins', sans-serif;
 }
 
 .section-heading .line-dec {
     width: 50px;
     height: 2px;
-    background-color: #00acb1;
+    background-color: #1779BD;
 }
 .about-right-content p {
     margin-top: 30px;
