--- a/src/components/navbarhome/navbarhome.css
+++ b/src/components/navbarhome/navbarhome.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 #navbar{
-    background-color:#00acb1;
+    background-color:#1779BD;
 }
 #login{
     background-color:#fff;
